--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,9 @@
 <div class="tableContainer">
+  <label
+    >Search Products:-
+    <input type="text" [(ngModel)]="searchText" (input)="handleInput($event)" />
+  </label>
+
   <table>
     <thead>
       <tr>
